<resources>
    <string name="app_name">欢聚宝</string>
    <string name="status_downloading">下载中</string>
    <string name="status_paused">暂停</string>
    <string name="status_downloaded">已下载</string>
    <string name="status_installed">已安装</string>
    <string name="status_hasupdate">有更新</string>
    <string name="status_downloading_action">取消</string>
    <string name="status_downloaded_action">安装</string>
    <string name="status_installed_action">卸载</string>
    <string name="status_hasupdate_action">更新</string>
    <string name="processing">处理中，请稍候...</string>
    <string name="processing_get_new_version">正在获取新版本信息，请稍候...</string>
    <string name="confirm">确认 </string>
    <string name="suggested_software">必备软件 </string>
    <string name="register_welcome">立即注册 </string>
    <string name="login_welcome">账号登录</string>
    <string name="use_welcome">跳过</string>
    <string name="welcome_1">根据您的手机提供适配的应用和游戏！ </string>
    <string name="welcome_2">欢聚宝还为注册会员提供 备份/恢复功能！</string>
    <string name="welcome_3">敬请期待！ </string>
    <string name="welcome">欢迎来到欢聚宝！ </string>
    <string name="write">请填写: </string>
    <string name="comment_top">欢迎参与评论 </string>
    <string name="error_happen_on_downloading">下载出错啦...请重新下载</string>
    <string name="welcome_choose">请选择您感兴趣的分类(可在设置中修改)</string>
    <string name="downloaded_notification">提示您:</string>
    <string name="recommend_notification">今日推荐：</string>
    <string name="cate1">休闲游戏</string>
    <string name="cate2">阅读软件</string>
    <string name="cate3">棋牌游戏</string>
    <string name="cate4">播放软件</string>
    <string name="cate5">角色扮演游戏</string>
    <string name="cate6">动作冒险游戏</string>
    <string name="cate7">信息咨询软件</string>
    <string name="cate8">劲爆网游</string>
    <string name="cate9">经典策略游戏</string>
    <string name="downloading_notification">开始下载喽~</string>
    <string name="installing_notification">下载完成, 请点击安装.</string>
    <string name="error_installing_app_not_found">无法完成安装。安装文件无法找到，请删除后重新下载安装。</string>
    <string name="download_waiting_list_notification">有%1$s个软件正在等待下载，请稍候</string>
    <string name="android_update_notification">%1$s 有新版本啦，请点击查看</string>
    <string name="download_count">下载:%1$s次</string>
    <string name="app_has_update_notification_title">%1$s个应用有可用更新</string>
    <string name="app_has_update_notification_context">您下载的应用有新版本啦，快点击更新吧</string>
    <string name="callback_notification_title">万花筒信息</string>
    <string name="callback_notification_context">有新软件上架，请点击查看</string>
    <string name="network_error_msg">联网失败, 请稍候重试</string>
    <string name="prompt_title">温馨提示</string>
    <string name="quit_confirm">您是否要退出欢聚宝市场?</string>
    <string name="nicknameerror">请更换昵称</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="app_detail">软件介绍 </string>
    <string name="comment_list">查看评论 </string>
    <string name="related_app">相关软件 </string>
    <string name="no_update_item">没有需要更新的应用</string>
    <string name="jump">跳过</string>
    <string name="menu_update">检查更新</string>
    <string name="menu_backup_and_recovery">备份/恢复</string>
    <string name="menu_help">关于</string>
    <string name="menu_setting">设置</string>
    <string name="submit">提交</string>
    <string name="menu_suggestion">意见反馈</string>
    <string name="suggestion_awake">您对欢聚宝市场有任何问题和建议，请留言给我们
		\n如果您还未注册欢聚宝市场，请填写您的邮箱，以便我们可以及时回复您</string>
    <string name="sendsuggestion_susseccful">反馈意见成功</string>
    <string name="sendsuggestion_failed">反馈意见失败</string>
    <string name="content_null">请填写建议，谢谢</string>
    <string name="menu_exit">退出</string>
    <string name="menu_manager">管理</string>
    <string name="about_silver">银币是欢聚宝市场的虚拟货币，是您在欢聚宝市场的财富象征。在账户中可以查到。</string>
    <string name="about_silver_question">银币可以用来做什么？</string>
    <string name="about_silver_answer">当您的银币达到一定数量后,可用来抽奖兑换真实礼物或直接购买一些游戏软件中的道具。</string>
    <string name="about_silver_question2">如何赚取银币?</string>
    <string name="about_silver_answer2">注册欢聚宝市场，邀请好友,分享软件,评论软件,都可以让您赚到银币。</string>
    <string name="get_it">我明白了</string>
    <string name="tabtitle_new">最新上线</string>
    <string name="tabtitle_hot">最多下载</string>
    <string name="menu_find_pwd">找回密码</string>
    <string name="menu_modify_pwd">修改密码</string>
    <string name="menu_logout">注销</string>
    <string name="menu_account">个人中心</string>
    <string name="tabtitle_suggested_new">猜你喜欢</string>
    <string name="tabtitle_suggested_hot">最新上线</string>
    <string name="tabtitle_suggested_others_download">下载动态</string>
    <string name="tabtitle_suggested_new111">我要夺宝</string>
    <string name="tabtitle_suggested_hot111">朋友列表</string>
    <string name="tabtitle_suggested_others_download111">抽取大奖</string>
    <string name="tabtitle_rank_week">周排行</string>
    <string name="tabtitle_rank_month">月排行</string>
    <string name="tabtitle_rank_all">总排行</string>
    <string name="tabtitle_cate_app">应用</string>
    <string name="tabtitle_cate_game">游戏</string>
    <string name="tabtitle_cate_chart">专题</string>
    <string name="tabtitle_downloading">猜你喜欢</string>
    <string name="tabtitle_downloaded">我的下载</string>
    <string name="tabtitle_searchresult">搜索结果</string>
    <string name="tabtitle_recovery">恢复</string>
    <string name="free">免费</string>
    <string name="languagetext">语言：%1$s</string>
    <string name="versiontext">版本：%1$s</string>
    <string name="sizetext">大小：%1$s</string>
    <string name="author">作者：%1$s</string>
    <string name="no_version">无</string>
    <string name="rating_count">已有%1$s人参与评分,</string>
    <string name="comment_count">%1$s人发表评论</string>
    <string name="language_chinese">中文 </string>
    <string name="language_english">英文</string>
    <string name="rate_app">我要评论</string>
    <string name="view_rating">查看评论</string>
    <string name="email">您的邮箱:</string>
    <string name="user_name">用户名（邮箱地址/手机号）</string>
    <string name="user_password">密  码</string>
    <string name="user_login">登录</string>
    <string name="user_findback_pwd">找回密码</string>
    <string name="user_register">确定</string>
    <string name="cate_newest_app_name">最新加入:%1$s</string>
    <string name="cate_app_count">%1$s</string>
    <string name="rating_up">顶！</string>
    <string name="rating_down">踩！</string>
    <string name="charge_list_test">充值方式</string>
    <string name="charge_cardnumber">充值卡卡号：</string>
    <string name="charge_password">充值卡密码：</string>
    <string name="charge_amount">充值卡面额:</string>
    <string name="charge">充值</string>
    <string name="weizhuce_text">尚未参加夺宝活动，快完善信息来参加夺宝吧！</string>
    <string name="user_info_hello">注册邮箱:</string>
    <string name="user_info_name">%1$s</string>
    <string name="user_info_nickname">您好，%1$s</string>
    <string name="user_info_phone">绑定手机: %1$s</string>
    <string name="user_info_gold">余额: %1$s</string>
    <string name="user_info_jifen">积分:</string>
    <string name="user_info_renqi">我的人气：</string>
    <string name="user_info_paiming">我的排名:</string>
    <string name="user_info_score">星座</string>
    <string name="user_info_what_is_gold">金币是？</string>
    <string name="user_info_what_is_score">银币是？</string>
    <string name="user_info_editinfo">编辑个人信息</string>
    <string name="user_info_editnick">设置昵称</string>
    <string name="user_info_editphone">绑定手机</string>
    <string name="user_info_consumelog">星座运势</string>
    <string name="user_info_invite">个性皮肤</string>
    <string name="user_info_charge">充值</string>
    <string name="user_info_duijiang">我的兑奖列表</string>
    <string name="user_info_xiugai">修改密码</string>
    <string name="user_info_goumai">购买记录</string>
    <string name="user_info_backup">备份</string>
    <string name="user_info_recovery">恢复</string>
    <string name="user_info_casino">检查更新</string>
    <string name="user_info_changepwd">修改密码</string>
    <string name="user_info__logout">注销</string>
    <string name="user_info_casino_result">您当前的版本已经是最新版本！</string>
    <string name="invite_info1">每邀请一个好友成功安装欢聚宝市场，即可获得100银币的奖励~~还可以额外获得一次抽奖机会！</string>
    <string name="invite_info2">备注：别忘记提醒您的朋友，点击接收到的地址进行安装，否则您将有可能无法获得奖励~~</string>
    <string name="invite_btn">立刻邀请好友</string>
    <string name="search_moreapp">在线搜索</string>
    <string name="comment_user_label">用户：</string>
    <string name="comment_time_label"></string>
    <string name="comment_rating_up">顶</string>
    <string name="comment_rating_down">踩</string>
    <string name="comment_rating">我要评论</string>
    <string name="next_hot_key">更多热门 </string>
    <string name="groupheader_downloading">下载中 (%1$s)</string>
    <string name="groupheader_installed">已安装 (%1$s)</string>
    <string name="groupheader_update">有可用更新 (%1$s)</string>
    <string name="groupheader_downloaded">已下载未安装 (%1$s)</string>
    <string name="input_username">您的邮箱（用户名）：</string>
    <string name="input_password">您的密码: </string>
    <string name="repeat_password">请再次输入密码: </string>
    <string name="not_set"></string>
    <string name="input_phone">您的手机号码: </string>
    <string name="input_nickname">您的昵称 </string>
    <string name="input_validate_code">验证码: </string>
    <string name="input_telephone">昵称: </string>
    <string name="input_telephone_text"></string>
    <string name="upload_user_info_Btn">提交 </string>
    <string name="send_validate_Btn">发送验证码 </string>
    <string name="set_userinfo_success">提交成功</string>
    <string name="send_validate_success">验证码发送成功</string>
    <string name="send_validate_fail">验证码发送失败, 请再试一次</string>
    <string name="send_validate_fail_frequently">请勿频繁发送短信！</string>
    <string name="send_validate_null">验证码不能为空！</string>
    <string name="validate_error">验证码错误！</string>
    <string name="phone_already_exist">手机号码已被使用！</string>
    <string name="set_userinfo_fail">提交失败, 请再试一次</string>
    <string name="bottom_button_download">下载</string>
    <string name="bottom_button_comment">评论</string>
    <string name="bottom_button_install">安装</string>
    <string name="bottom_button_uninstall">卸载</string>
    <string name="bottom_button_update">更新</string>
    <string name="bottom_button_launch">打开</string>
    <string name="bottom_button_delete">删除</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败，请再试一次</string>
    <string name="show_more_screenshots">点击查看更多图片</string>
    <string name="error_select_channel">请您选择充值方式</string>
    <string name="charge_successful">恭喜您，充值成功！</string>
    <string name="pay_successful">恭喜您，付费成功！</string>
    <string name="empty_downloading_list">有空吗？快去推荐栏目逛逛吧！</string>
    <string name="empty_downloaded_list">还没有下载吗？快行动起来吧！</string>
    <string name="firsttime_prompt">您好，今天是 %1$s，欢聚宝正在备货，请稍候</string>
    <string name="error_pay_failed">付费未成功，请重试</string>
    <string name="error_pay_wrong_appid">付费未成功，该应用可能是非法程序，请谨慎使用</string>
    <string name="change_pwd_old_pwd">原密码</string>
    <string name="change_pwd_new_pwd">新密码</string>
    <string name="change_pwd_new_pwd_confirm">确认新密码</string>
    <string name="setting_cate_market">欢聚宝市场设置</string>
    <string name="setting_download_icon">显示应用图片</string>
    <string name="setting_download_icon_summary">不显示图片可以节省用户流量</string>
    <string name="setting_recommend_notification">自动提示今日推荐软件</string>
    <string name="setting_recommend_notification_summary">每天自动提示您“今日推荐”的软件名称</string>
    <string name="setting_voice_notification">设置通知提示音和振动</string>
    <string name="setting_voice_notification_summary">自动提示您已下载完某个应用</string>
    <string name="setting_clear_memory_title">清除缓存</string>
    <string name="setting_clear_memory_content">清除缓存可以节省您一定的SD卡空间，但会造成资源的重复下载，是否真的需要清除呢？</string>
    <string name="my_favor_cate">选择您感兴趣的软件分类</string>
    <string name="my_favor_cate_summary">您的选择能让欢聚宝更聪明的帮您挑出您最喜欢的</string>
    <string name="bottom_button_lottery">抽奖</string>
    <string name="rule_text">抽奖规则</string>
    <string name="rule">例：支付100点积分即可参与抽取大奖活动，即开激活送完为止。</string>
    <string name="receiver">收件人：</string>
    <string name="tel">电话：</string>
    <string name="address1">地址：</string>
</resources>