<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
     android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:orientation="vertical" >

    <!-- old password -->
    <!-- old password label -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/dialog_title_bg"
        android:orientation="vertical" 
        android:gravity="center"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_modify_pwd"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_content_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/change_pwd_old_pwd"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- old password  text editor -->

        <EditText
            android:id="@+id/change_pwd_old_pwd_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip"
            android:password="true"
            android:singleLine="true"
            android:textSize="16sp" />

        <!-- new password -->
        <!-- new password label -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/change_pwd_new_pwd"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- new password editor -->

        <EditText
            android:id="@+id/change_pwd_new_pwd_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip"
            android:password="true"
            android:singleLine="true"
            android:textSize="16sp" />

        <!-- new password confirm -->
        <!-- new password confirm label -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/change_pwd_new_pwd_confirm"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- new password confirm text editor -->

        <EditText
            android:id="@+id/change_pwd_new_pwd_confirm_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip"
            android:password="true"
            android:singleLine="true"
            android:textSize="16sp" />

        <!-- change pwd button -->

        <include
            android:id="@+id/change_password_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            layout="@layout/long_button" />
    </LinearLayout>

</LinearLayout>